<resources>
    <string name="tr_slogan">Live Quiz Game Show</string>
    <string name="tr_login_via_facebook">Login via Facebook</string>
    <string name="tr_login_via_phone">Login via Phone</string>
    <string name="tr_accept_terms">By singing up you agree to %1$s, %2$s and %3$s</string>
    <string name="tr_terms_of_use">Terms of Use</string>
    <string name="tr_privacy_policy">Privacy Policy</string>
    <string name="tr_error">Error</string>
    <string name="tr_country">Country</string>
    <string name="tr_number">Number</string>
    <string name="tr_phone_number">Phone Number</string>
    <string name="tr_verify">Verify</string>
    <string name="tr_profile">Profile</string>
    <string name="tr_phone_code_info">Enter the 6-digit code we sent to</string>
    <string name="tr_resend_code_time">Resend code in %d</string>
    <string name="tr_resend_code">Resend Code</string>
    <string name="tr_profile_info">Choose avatar and username for your profile</string>
    <string name="tr_choose_username">Choose username</string>
    <string name="tr_new_photo">New Photo</string>
    <string name="tr_camera_roll">Gallery</string>
    <string name="tr_delete_avatar">Delete Avatar</string>
    <string name="tr_cancel">Cancel</string>
    <string name="tr_username_rules">Username must be between 3 and 191 characters long, can contain latin characters, numbers, underscores and dashes.</string>
    <string name="tr_next_game">Next Game</string>
    <string name="tr_prize">Prize</string>
    <string name="tr_balance">Balance</string>
    <string name="tr_lives">Lives</string>
    <string name="tr_get_more_lives">Get More Lives</string>
    <string name="tr_no_upcoming_show">No upcoming show found</string>
    <string name="tr_rank_this_week">Rank this week: %s</string>
    <string name="tr_logout">Logout</string>
    <string name="tr_invite">Invite</string>
    <string name="tr_share_text">I\'m playing a game called %1$s! You should try it. Use my code \'%2$s\' to sign up %3$s</string>
    <string name="tr_tomorrow">Tomorrow</string>
    <string name="tr_leaderboard">Leaderboard</string>
    <string name="tr_this_week">This Week</string>
    <string name="tr_all_time">All Time</string>
    <string name="tr_live_watch_now">Live! Watch Now!</string>
    <string name="tr_reveal_comments">Swipe left to reveal comments</string>
    <string name="tr_too_late">Sorry, too late :(</string>
    <string name="tr_watching_only">Watching Only</string>
    <string name="tr_connection_lost">Lost connection. Reconnect...</string>
    <string name="tr_connected">Connected!</string>
    <string name="tr_winners">Winners!</string>
    <string name="tr_you_won">You Won!</string>
    <string name="tr_share">Share</string>
    <string name="tr_share_win_text">I have just won in %1$s with %2$s! %3$s</string>
    <string name="tr_ok">OK</string>
    <string name="tr_close">Close</string>
    <string name="tr_leave_game">Sure to leave the game?</string>
    <string name="tr_already_started">Unfortunately the show has already started and you have missed 1st question. You can keep watching but not participate.</string>
    <string name="tr_yes">Yes</string>
    <string name="tr_no">No</string>
    <string name="tr_lives_info">Don\'t worry about giving a wrong answer. You can use lives to stay in the game. Share your referral code with your friends and get an extra life for every referral sign up.</string>
    <string name="tr_your_referral_code">Your referral code</string>
    <string name="tr_apply_referral_code">Apply Referral Code</string>
    <string name="tr_referral_code">Referral Code</string>
    <string name="tr_referral_code_success">Referral code has been applied!</string>
    <string name="tr_apply">Apply</string>
    <string name="tr_life_used_success">Life used. Back in the game!</string>
    <string name="tr_life_used_failure">Cannot use life</string>
    <string name="tr_wrong_answer">Wrong Answer!</string>
    <string name="tr_suggest_life">Use life to stay in the game?</string>
    <string name="tr_faq">FAQs</string>
    <string name="tr_rules">Rules</string>
    <string name="tr_paypal_placeholder">PayPal Email Address</string>
    <string name="tr_paypal_info">Please verify that the email used above is a valid PayPal email account.</string>
    <string name="tr_cashout_button">Cashout with PayPal</string>
    <string name="tr_cashout">Cashout</string>
    <string name="tr_cashout_success">Cashout request has been successfully sent!</string>
    <string name="tr_next">Next</string>
    <string name="tr_app_notifications">%1$s notifications.</string>

</resources>
