<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signin.LoginActivity">


    <ImageView
        android:id="@+id/bcg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bcg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/legalInfoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tr_accept_terms"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8"
        android:gravity="center"
        />

    <Button
        style="@style/AppTheme.Button.Login"
        android:id="@+id/loginPhoneButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tr_login_via_phone"
        android:layout_marginBottom="48dp"
        android:drawableLeft="@drawable/phone_dw"
        app:layout_constraintBottom_toTopOf="@id/legalInfoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".6"
        />

    <Button
        style="@style/AppTheme.Button.Login"
        android:id="@+id/loginFacebookButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tr_login_via_facebook"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/facebook_dw"
        app:layout_constraintBottom_toTopOf="@id/loginPhoneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".6"
        />

    <TextView
        android:id="@+id/sloganTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tr_slogan"
        style="@style/AppTheme.Slogan"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/loginFacebookButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".5"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:maxWidth="320dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/sloganTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        />

</android.support.constraint.ConstraintLayout>