<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.home.ShowActivity">

    <!--region Video -->

    <SurfaceView
        android:id="@+id/playerSurfaceView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/white"
        android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!--endregion-->

    <!--region Overlay -->

    <View
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/show.overlay"
        android:visibility="invisible"
        />

    <!--endregion-->

    <!--region Question -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/questionCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chat"
        >

        <android.support.constraint.Guideline
            android:id="@+id/guidelineQestion"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/questionTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Question"
            android:gravity="center_vertical"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="16dp"
            app:autoSizeMaxTextSize="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guidelineQestion"
            />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/questionOptionsView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineQestion"
            />


    </android.support.constraint.ConstraintLayout>

    <!--endregion-->

    <!--region Winners -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/winnersView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chat"
        >

        <TextView
            android:id="@+id/winnersTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tr_winners"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/winnersUserView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/winnersTitleTextView"
            app:layout_constraintBottom_toTopOf="@id/winnersShareButton"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatarImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/avatar"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/winnerUsername"
                />

            <TextView
                android:id="@+id/winnerUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="wiZZard"
                android:gravity="center"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/winnerPrize"
                />

            <TextView
                android:id="@+id/winnerPrize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="$25.14"
                android:gravity="center"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:alpha="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </android.support.constraint.ConstraintLayout>

        <Button
            style="@style/AppTheme.Button.Share"
            android:id="@+id/winnersShareButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tr_share"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent=".6"
            />

    </android.support.constraint.ConstraintLayout>

    <!--endregion-->

    <!--region Chat -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/chat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        >

        <android.support.constraint.Guideline
            android:id="@+id/outsideGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="2.0" />

        <TextView
            android:id="@+id/swipeInfoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tr_reveal_comments"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/message"

            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/chatList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scrollbars="none"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/openButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/openButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:src="@drawable/chat_dw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                />

            <ImageView
                android:id="@+id/sendButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:src="@drawable/send_dw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                />

            <com.uniprogy.outquiz.helpers.LoseFocusEditText
                style="@style/AppTheme.Field.Show"
                android:id="@+id/chatEditText"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:focusedByDefault="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sendButton"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/swipeArea"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


    </android.support.constraint.ConstraintLayout>

    <!--endregion-->

    <!--region Header -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/eyeIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/eye_dw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/viewersCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="126K"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/eyeIcon"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/warningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Warning"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@color/show.warning"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/icon"
            android:visibility="visible"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/questionStatusImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/checkmark"
            android:background="@drawable/answer_status_dw"
            android:visibility="invisible"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.github.lzyzsd.circleprogress.DonutProgress
            android:id="@+id/questionCountdownTimer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:donut_background_color="@android:color/transparent"
            app:donut_finished_color="@color/text"
            app:donut_finished_stroke_width="2dp"
            app:donut_text_color="@color/text"
            app:donut_text_size="20dp"
            app:donut_unfinished_stroke_width="2dp"
            app:donut_unfinished_color="@color/background"
            app:donut_progress="300"
            app:donut_text="7"
            app:donut_max="1000"
            app:donut_circle_starting_degree="270"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

    <!--endregion-->

</android.support.constraint.ConstraintLayout>